statefulset.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
 name: mysql-statefulset
 namespace: mysql
spec:
 serviceName: mysql-service
 replicas: 3
 selector:
  matchLabels:
   app: mysql
 template:
  metadata:
   name: mysql-pod
   labels:
    app: mysql
  spec:
   containers:
    - name: mysql
      image: mysql:8.0
      ports:
       - containerPort: 3306 
      volumeMounts:
       - name: mysql-volume
         mountPath: /var/lib/mysql
 volumeClaimTemplates:
  - metadata:
     name: mysql-volume
    spec:
     accessModes: ["ReadWriteOnce"]
     resources:
      requests:
       storage: 1Gi
