service.yml
kind: Service
apiVersion: v1
metadata:
 name: nginx-service
 namespace: nginx-ns
spec:
 selector:
  app: nginx
 ports:
  - protocol: TCP
    # service port 
    port: 80
    # container port 80 where nginx is listening
    targetPort: 80
 type: ClusterIP
