ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
 name: test-ingress
 namespace: test-ns
 annotations: 
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
  - http:
     paths:
      - pathType: Prefix
        path: /backend
        backend:
         service:
          name: backend-service
          port: 
           number: 4001
      - pathType: Prefix
        path: /frontend
        backend:
         service:
          name: frontend-service
          port: 
           number: 5173
